# Paperfly

./: .gitignore  CMakeLists.txt  README.md  compile_shader.sh
Include/: Application.hpp  Library.hpp
Include/Renderer/: Application.hpp  BufferManip.hpp  CommandBuffers.hpp  CommandPool.hpp  Debug.hpp  DepthImage.hpp  DescriptorSets.hpp  Devices.hpp  Framebuffers.hpp  GraphicsPipeline.hpp  IApplication.hpp  Instance.hpp  Mesh.hpp  Model.hpp  RenderPass.hpp  Surface.hpp  SwapChain.hpp  SyncObjects.hpp  Texture.hpp  UniformBuffers.hpp  Utils.hpp  Vertex.hpp  Window.hpp
Include/Scene/: Camera.hpp  Cylinder.hpp  PaperPlane.hpp  Paperfly.hpp
Source/: Application.cpp  Debug.cpp  Main.cpp
Source/Renderer/: Application.cpp  BufferManip.cpp  CommandBuffers.cpp  CommandPool.cpp  Debug.cpp  DepthImage.cpp  DescriptorSets.cpp  Devices.cpp  Framebuffers.cpp  GraphicsPipeline.cpp  Instance.cpp  Mesh.cpp  Model.cpp  RenderPass.cpp  Surface.cpp  SwapChain.cpp  SyncObjects.cpp  Texture.cpp  UniformBuffers.cpp  Utils.cpp  Window.cpp
Source/Scene/: Camera.cpp  Cylinder.cpp  PaperPlane.cpp  Paperfly.cpp
